@startuml

title __TESTINGZAB_1's Class Diagram__\n

  namespace com.company {
    class com.company.City {
    }
  }
  

  namespace com.company {
    class com.company.FileManager {
    }
  }
  

  namespace com.company {
    class com.company.FlightRoutesList {
    }
  }
  

  namespace com.company {
    class com.company.FlightsList {
    }
  }
  

  namespace com.company {
    class com.company.Main {
    }
  }
  

  namespace com.company {
    class com.company.NodeFlight {
    }
  }
  

  namespace com.company {
    class com.company.NodeFlightRoute {
    }
  }
  

  namespace com.company {
    class com.company.NodePassenger {
    }
  }
  

  namespace com.company {
    class com.company.PassengerList {
    }
  }
  

  namespace com.company {
    class com.company.StaticUtils {
    }
  }
  

  com.company.City .up.|> java.io.Serializable
  com.company.FlightRoutesList .up.|> java.io.Serializable
  com.company.FlightRoutesList o-- com.company.NodeFlightRoute : head
  com.company.FlightsList .up.|> java.io.Serializable
  com.company.FlightsList o-- com.company.NodeFlight : head
  com.company.NodeFlight .up.|> java.io.Serializable
  com.company.NodeFlight o-- com.company.City : destination
  com.company.NodeFlight o-- com.company.NodeFlight : next
  com.company.NodeFlight o-- com.company.City : source
  com.company.NodeFlightRoute .up.|> java.io.Serializable
  com.company.NodeFlightRoute o-- com.company.NodeFlightRoute : next
  com.company.NodeFlightRoute o-- com.company.FlightsList : flights
  com.company.NodePassenger .up.|> java.io.Serializable
  com.company.NodePassenger o-- com.company.NodePassenger : next
  com.company.PassengerList .up.|> java.io.Serializable
  com.company.PassengerList o-- com.company.NodePassenger : head
  com.company.StaticUtils .up.|> java.io.Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
